Inclusão de tudo

--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>SorteioNome</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Soirteios</title>
 </head>
 <body>
+    
+    <main class="main">
+        <div class="conteiner">
 
-    <main class="app">
+            <h1>Sorteios</h1>
+            <div class="linha"></div>
 
-        <section class="sorteio">
-            <div class="conteiner">
+            <div class="sorteios">
 
-                <h2>Sorteio de nomes</h2>
-                <div class="linha"></div>
-
-                <div class="formulario conteiner"> 
-
-                    <label for="entradaNomes">Adicione os nome para o sorteio</label>
-
-                    <textarea id="entradaNomes" placeholder="Adicione os nomes separados por virgulas. ex(Juliana, Rebeca)"></textarea>
-
-                    <button class="sortear">Sortear</button>
-
+                <div class="Snumeros Sorteio">
+                    <a href="Numero.html">Sorteio de números</a>
                 </div>
 
-                <div class="resultado">
-                    <p>resultado:</p>
+                <div class="Snomes Sorteio">
+                    <a href="SorteioNomes.html">Sorteio de nomes</a>
                 </div>
 
             </div>
-        </section>
 
+        </div>
     </main>
 
-    <script src="main.js"></script>
-    
 </body>
 </html>
